updated class name, moved css code blocks into new more logical order

--- a/Develop/index.html
+++ b/Develop/index.html
@@ -24,7 +24,7 @@
             </ul>
         </div>
     </div>
-    <div class="hero"></div>
+    <div class="front-page-banner"></div>
     <div class="content">
         <div class="main-content-panel" id="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
