added Develop folder to be changed and to be committed and pushed

--- a/Develop/index.html
+++ b/Develop/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="UTF-8" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
     <link rel="stylesheet" href="./assets/css/style.css">
     <title>Horiseon</title>
 </head>
