--- a/index.html
+++ b/index.html
@@ -5,11 +5,13 @@
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
     <link rel="stylesheet" href="assets/css/style.css">
+    
+
     <title>Horiseon</title>
 </head>
 
 <body>
-    <div class="header">
+    <header class="header">
         <h1>Hori<span class="seo">seo</span>n</h1>
         <div>
             <ul>
@@ -24,9 +26,10 @@
                 </li>
             </ul>
         </div>
-    </div>
+    </header>
     <div class="front-page-banner"></div>
-    <div class="content">
+    
+    <article class="content">
         <div class="main-content-panel" id="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
             <h2>Search Engine Optimization</h2>
@@ -49,9 +52,9 @@
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
             </p>
         </div>
-    </div>
+    </article>
 
-    <div class="benefits">
+    <aside class="benefits">
         <div class="benefit-sections">
             <h3>Lead Generation</h3>
             <img src="assets/images/lead-generation.png" />
@@ -73,7 +76,7 @@
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
             </p>
         </div>
-    </div>
+    </aside>
 </body>
-
+<!-- TO DO: try and consolidate css style page more if possible, comment sections of CSS properly, all of Repository quality sections -->
 </html>
