added better comments for stylesheet, added an alt for screenreader for frontpage image

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             </ul>
         </div>
     </header>
-    <div class="front-page-banner"></div>
+    <div class="front-page-banner" alt="Employees working in boardroom"></div>
     
     <article class="content">
         <div class="main-content-panel" id="search-engine-optimization">
