updated margins on benefits section to more closely match spacing of example

--- a/index.html
+++ b/index.html
@@ -78,5 +78,5 @@
         </div>
     </aside>
 </body>
-<!-- TO DO: try and consolidate css style page more if possible, comment sections of CSS properly, all of Repository quality sections -->
+<!-- TO DO: try and consolidate css style page more if possible, all of Repository quality sections -->
 </html>
