added basic comments to index page

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 </head>
 
 <body>
+<!-- HEADER WITH TITLE AND NAVBAR -->
     <header class="header">
         <h1>Hori<span class="seo">seo</span>n</h1>
         <nav>
@@ -27,8 +28,9 @@
             </ul>
         </nav>
     </header>
+<!-- FRONTPAGE IMAGE -->
     <div class="front-page-banner" alt="Employees working in boardroom"></div>
-
+<!-- MAIN CONTENT OF PAGE -->
     <main>
         <article class="content">
             <section class="main-content-panel" id="search-engine-optimization">
@@ -55,6 +57,7 @@
             </section>
         </article>
     
+<!-- ASIDE SECTION  -->
         <aside class="benefits">
             <div class="benefit-sections">
                 <h3>Lead Generation</h3>
